# mcp-sql-rust

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  mcp-sql-rust.example.toml  server.json
.cursor/rules/: README.md  mcp-ecosystem-protocol.mdc  mcp-sql-core.mdc  omni-agent-protocol.mdc  omni-token-economy.mdc  rust-conventions.mdc  sql-guard.mdc  token-efficiency.mdc
.cursor/skills/mcp-sql-dev-workflow/: SKILL.md
.cursor/skills/mcp-tools-surface/: SKILL.md
.cursor/skills/omni-mcp-playbook/: SKILL.md
.cursor/skills/omni-token-economy/: SKILL.md
.cursor/skills/sql-guard-safety/: SKILL.md
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/workflows/: ci.yml  docker.yml  registry-publish.yml  release.yml
.omni/filters/: mcp-sql-rust.toml
.opencode/agents/: developer.md  reviewer.md
docker/seed/: mysql.sql  postgres.sql
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONFIGURATION.md  CONTRIBUTING.md  CURSOR.md  DEV_WORKFLOW.md  INSTALL.md  MCP_REGISTRY.md  MYSQL.md  OMNI_CURSOR_SETUP.md  POSTGRES.md  QUICKSTART.md  SECURITY.md  SQLITE.md  TEST_REPORT.md  TOOLS.md
docs/templates/agent/: README.md  opencode.json.template
mcpb/: manifest.json
packaging/: cursor-mcp-launcher.mjs  mcp.json.example
packaging/homebrew/: mcp-sql-rust.rb  strut-stack-sql.rb
packaging/scoop/: mcp-sql-rust.json  strut-stack-sql.json
packaging/winget/: rzlco666.mcp-sql-rust.yaml  rzlco666.strut-stack-sql.yaml
scripts/: bump-homebrew-formula.sh  bump-windows-manifests.sh  setup-agent-dev.sh  update-server-json-sha.sh
scripts/benchmark/: benchmark-results.json  mcp-client.mjs  mcp-sql-rust.sh  run-mysql-vs-mcp-mysql.sh  run-mysql.sh  run.sh
src/: config.rs  lib.rs  main.rs  redact.rs  server.rs
src/db/: bind.rs  exec.rs  explain.rs  mod.rs  pool.rs  schema.rs  value.rs
src/format/: columnar.rs  mod.rs
src/guard/: classify.rs  mod.rs  params.rs
src/tools/: core.rs  ddl.rs  full.rs  mod.rs
tests/: http_integration.rs  mysql_integration.rs  sqlite_integration.rs  unit.rs
