[package]
name = "strut-stack-sql"
version = "1.0.0"
edition = "2021"
rust-version = "1.88"
description = "Strut Stack SQL — token-efficient MCP server for MySQL, PostgreSQL, and SQLite"
license = "MIT"
repository = "https://github.com/rzlco666/strut-stack-sql"
homepage = "https://github.com/rzlco666/strut-stack-sql"
readme = "README.md"
keywords = ["mcp", "mysql", "postgresql", "sqlite", "sql", "ai-agent", "strut-stack"]
categories = ["command-line-utilities", "database"]
publish = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/strut-stack-sql-{ target-family }-{ target-arch }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "strut-stack-sql"
path = "src/main.rs"

# Compat alias for one release cycle (mcp-sql-rust configs / wrappers).
[[bin]]
name = "mcp-sql-rust"
path = "src/main.rs"

[lib]
name = "strut_stack_sql"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-std", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "json",
    "chrono",
    "uuid",
    "bigdecimal",
] }

sqlparser = "0.62"

rmcp = { version = "2", features = [
    "server",
    "macros",
    "schemars",
    "transport-io",
    "transport-streamable-http-server",
] }
schemars = "1"

axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
uuid = { version = "1", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "json",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
